更新了删除记录方法